5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1756_1185.log
== SUBMITION (2019-05-29 12:00:08) 
-- CODE:
 from numpy import *
glic = array(eval(input("Digite ")))

i = 0
acima = 0
while (i < size(glic)):
	if (glic[i] > 99):
		print(i)
		acima += 1
	i += 1
print(acima)
-- EXECUTION TIME:
0.160507
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 1
    from numpy import *
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:00:10) 
-- CODE:
 from numpy import *
glic = array(eval(input("Digite ")))

i = 0
acima = 0
while (i < size(glic)):
	if (glic[i] > 99):
		print(i)
		acima += 1
	i += 1
print(acima)
-- ERROR:
File "XXXX", line 1
    from numpy import *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:00:21) 
-- CODE:
from numpy import *
glic = array(eval(input("Digite ")))

i = 0
acima = 0
while (i < size(glic)):
	if (glic[i] > 99):
		print(i)
		acima += 1
	i += 1
print(acima)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:00:23) 
-- CODE:
from numpy import *
glic = array(eval(input("Digite ")))

i = 0
acima = 0
while (i < size(glic)):
	if (glic[i] > 99):
		print(i)
		acima += 1
	i += 1
print(acima)
-- EXECUTION TIME:
0.295268
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
